--- a/2.Classification/2.1 K Nearest Neighbour/k_nearest_neighbors.ipynb
+++ b/2.Classification/2.1 K Nearest Neighbour/k_nearest_neighbors.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/uploading/2.Classification/2.1%20K%20Nearest%20Neighbour/k_nearest_neighbors.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/2.Classification/2.1%20K%20Nearest%20Neighbour/k_nearest_neighbors.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1075,6 +1075,39 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**n_neighbors=5:** This means the classifier will consider the 5 closest neighbors to a new data point when making a prediction.\n",
+        "\n",
+        "**metric='minkowski':** Minkowski distance is a generalized form of both Euclidean and Manhattan distances, widely used in KNN.\n",
+        "\n",
+        "**p=2:** Since p=2, the Minkowski distance reduces to Euclidean distance, which is the most common distance metric.\n",
+        "\n",
+        "**Minkowski Distance**\n",
+        "The Minkowski distance is a generalized metric used to measure the distance between two points in space.\n",
+        "\n",
+        "**Manhattan Distance** (p=1) When\n",
+        "**p=1** Minkowski distance simplifies to **Manhattan Distance**, which calculates distance by summing the absolute differences between feature values\n",
+        "\n",
+        "It measures distance along grid-like paths (like navigating city streets).\n",
+        "\n",
+        "**Euclidean Distance** (p=2) When\n",
+        "**p=2** Minkowski distance simplifies to Euclidean Distance, which is the most commonly used distance metric.\n",
+        "\n",
+        "Measures the shortest straight-line distance between two points.\n",
+        "Works best when features are continuous and evenly scaled.\n",
+        "\n",
+        "**Higher Values of p (p>2)**\n",
+        "\n",
+        "As p increases, the distance metric puts more emphasis on larger differences between feature values.\n",
+        "\n",
+        "It approaches **Chebyshev Distance** when **p → ∞**, where the distance is simply the largest absolute difference among any feature."
+      ],
+      "metadata": {
+        "id": "T18Q1iDliELV"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "e0pFVAmciHQs",
@@ -1693,6 +1726,29 @@
       "source": [
         "## Making the Confusion Matrix"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**confusion_matrix(y_test, y_pred)** generates a table that compares predicted class labels (y_pred) with actual class labels (y_test).\n",
+        "\n",
+        "The confusion matrix provides insights into true positives (TP), true negatives (TN), false positives (FP), and false negatives (FN).\n",
+        "\n",
+        "**[[TN  FP]**\n",
+        "\n",
+        " **[FN  TP]]**\n",
+        "\n",
+        " **TN (True Negative):** Correctly predicted negative class.\n",
+        "\n",
+        "**FP (False Positive):** Incorrectly predicted as positive.\n",
+        "\n",
+        "**FN (False Negative):** Incorrectly predicted as negative.\n",
+        "\n",
+        "**TP (True Positive):** Correctly predicted positive class."
+      ],
+      "metadata": {
+        "id": "SmTI1On5kgSU"
+      }
     },
     {
       "cell_type": "code",
