--- a/2.Classification/2.3 Support Vector Machine/support_vector_machine.ipynb
+++ b/2.Classification/2.3 Support Vector Machine/support_vector_machine.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/uploading/2.Classification/2.3%20Support%20Vector%20Machine/support_vector_machine.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/2.Classification/2.3%20Support%20Vector%20Machine/support_vector_machine.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1072,6 +1072,19 @@
       "source": [
         "## Training the SVM model on the Training set"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**kernel='linear':** This means you're using a linear SVM, which tries to separate data with a straight line (or hyperplane in higher dimensions).\n",
+        "\n",
+        "Works well for binary classification and high-dimensional spaces.\n",
+        "\n",
+        " **You can use rbf** for more better result for **non-linear** data set."
+      ],
+      "metadata": {
+        "id": "3DkNfwBqp6Ck"
+      }
     },
     {
       "cell_type": "code",
