--- a/2.Classification/2.6 Decision Tree Classification/decision_tree_classification.ipynb
+++ b/2.Classification/2.6 Decision Tree Classification/decision_tree_classification.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/uploading/2.Classification/2.6%20Decision%20Tree%20Classification/decision_tree_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/2.Classification/2.6%20Decision%20Tree%20Classification/decision_tree_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1072,6 +1072,37 @@
       "source": [
         "## Training the Decision Tree Classification model on the Training set"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**criterion='entropy':**\n",
+        "\n",
+        "This defines how the tree splits data.\n",
+        "\n",
+        "Entropy measures impurity using Information Gain (higher information gain is better).\n",
+        "\n",
+        "**Another option** is 'gini', which measures impurity using the Gini index.\n",
+        "\n",
+        "**1. Decision Tree Classification**\n",
+        "\n",
+        "**Feature scaling is not required**, but it can be useful if combined with other models like Gradient Boosting.\n",
+        "\n",
+        "Since Decision Trees split data based on feature values, rather than using distances, scaling doesn't impact the splits.\n",
+        "\n",
+        "**2. Decision Tree Regression**\n",
+        "\n",
+        "**Feature scaling is also not necessary**, but there's one key difference:\n",
+        "\n",
+        "**In regression,** decisions are made based on **numeric values**, creating piecewise constant regions\n",
+        "\n",
+        "**Why Other Models Need Scaling**\n",
+        "\n",
+        "KNN, SVM, Logistic Regression → These rely on distance metrics (like Euclidean distance), making scaling essential."
+      ],
+      "metadata": {
+        "id": "N9byHWHkt2uF"
+      }
     },
     {
       "cell_type": "code",
