--- a/2.Classification/2.7 Random Forest Classification/random_forest_classification.ipynb
+++ b/2.Classification/2.7 Random Forest Classification/random_forest_classification.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/uploading/2.Classification/2.7%20Random%20Forest%20Classification/random_forest_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MuhammadMaazKhan/Machine-Learning/blob/main/2.Classification/2.7%20Random%20Forest%20Classification/random_forest_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1072,6 +1072,21 @@
       "source": [
         "## Training the Random Forest Classification model on the Training set"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**n_estimators=10:** The number of decision trees in the forest.\n",
+        "\n",
+        "**criterion='entropy':** Using entropy to measure impurity and decide tree splits (alternative is 'gini').\n",
+        "\n",
+        "**random_state=0:** Ensures consistent results across runs.\n",
+        "\n",
+        "Random Forest does not require **feature scalin**g but it can sometimes be beneficial"
+      ],
+      "metadata": {
+        "id": "X8axPwIdwfes"
+      }
     },
     {
       "cell_type": "code",
